--- a/webroot/css/deedsy.layout.css
+++ b/webroot/css/deedsy.layout.css
@@ -21,10 +21,10 @@ html, body {
 	padding-top: 0px;
 }
 
-#container {
+.content {
 	padding-top: 140px;
 }
 
-#footer {
+.footer {
 	text-align: center;
 }
