--- a/webroot/css/deedsy.type.css
+++ b/webroot/css/deedsy.type.css
@@ -5,6 +5,16 @@ h1 {
 	color: #640633;
 }
 
+h2 {
+	font: 700 24px "Open Sans Condensed", Helvetica, sans-serif;
+	color: #640633;
+}
+
+h3 {
+	font: 300 24px "Open Sans Condensed", Helvetica, sans-serif;
+	color: #414141;
+}
+
 /* Navigation */
 
 .nav li a {
