static pages mostly

--- a/webroot/css/deedsy.type.css
+++ b/webroot/css/deedsy.type.css
@@ -25,3 +25,19 @@ h3 {
 .nav a:hover {
 	text-decoration: underline !important;
 }
+
+/* Footer */
+.social p {
+	font: 700 14px "Open Sans Condensed", Helvetica, sans-serif;
+	color: #640633;
+}	
+
+#foottext p {
+	font: 12px Myriad Pro, Myriad, Helvetica, Arial, Sans-serif;
+	color: #404242;
+}
+
+body {
+	font: 14px Myriad Pro, Myriad, Helvetica, Arial, Sans-serif !important;
+	color: #404242 !important;
+}
