--- a/webroot/css/deedsy.layout.css
+++ b/webroot/css/deedsy.layout.css
@@ -11,10 +11,11 @@ html, body {
 }
 
 .navbar-inner {
-	height: 130px;
-	background-color: #FFFFFF;
+	height: 145px;
+	background-color: transparent;
 	background-image: url('../img/header_bg.png');
 	background-repeat: repeat-x;
+	box-shadow: none;
 }
 
 .navbar .brand {
@@ -27,6 +28,7 @@ html, body {
 
 .footer {
 	text-align: center;
+	margin-top: 50px;	
 }
 
 /* Phillip's Overrides */
@@ -39,3 +41,41 @@ li.active a {
 	background-color: transparent !important;
 	text-decoration: underline !important;
 }	
+
+/* Phillip's Custom */
+.banner {
+	background: transparent url('/img/1gooddeed.png') no-repeat center top;
+	height: 303px;
+	width: 154px; 
+	position: relative;
+	z-index: 0;
+	margin-top: -25px;
+}
+
+.fb {
+	background: transparent url('/img/social.png') no-repeat center top;
+	background-position: -43px 0px;
+	width: 44px;
+	height: 44px;
+	float: left;
+	margin: 0 10px 0 0;
+}
+
+.twitter {
+	background: transparent url('/img/social.png') no-repeat center top;
+	background-position: 0px 0px;
+	width: 44px;
+	height: 44px;
+	float: left;
+	margin: 0 10px 0 0;
+}
+
+.clear {
+	clear: both !important;
+}
+
+#foottext {
+	text-align: center;
+	margin: 0 auto;
+	padding-top: 20px;
+}
