--- a/webroot/css/deedsy.layout.css
+++ b/webroot/css/deedsy.layout.css
@@ -2,12 +2,12 @@ html, body {
 	height: 100%;
 	min-height: 100%;
 	
-	background-image: url('../img/footer_bg.png');
-	background-repeat: repeat-x;
-	background-position: bottom;
-	
 	/*padding-bottom: 155px;*/
 	margin-bottom: -155px;
+}
+
+#page-body{
+	padding-bottom:100px;   /* Height of the footer */
 }
 
 .navbar-inner {
@@ -22,11 +22,27 @@ html, body {
 }
 
 .content {
-	padding-top: 140px;
+	/*padding-top: 140px;*/
 }
 
 .footer {
 	text-align: center;
+}
+
+#page-wrapper {
+   min-height:100%;
+   position:relative;
+}
+
+#page-footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:100px;   /* Height of the footer */
+   
+   background-image: url('../img/footer_bg.png');
+   background-repeat: repeat-x;
+   background-position: top;
 }
 
 /* Phillip's Overrides */
