--- a/webroot/css/deedsy.type.css
+++ b/webroot/css/deedsy.type.css
@@ -11,7 +11,7 @@ h2 {
 }
 
 h3 {
-	font: 300 24px "Open Sans Condensed", Helvetica, sans-serif;
+	font: 300 16px "Open Sans Condensed", Helvetica, sans-serif;
 	color: #414141;
 }
 
@@ -21,6 +21,8 @@ h3 {
 	font: 18px "Snippet", Helvetica, sans-serif;
 	color: #fff !Important;
 }
+
+#salut 
 
 .nav a:hover {
 	text-decoration: underline !important;
