--- a/webroot/css/deedsy.layout.css
+++ b/webroot/css/deedsy.layout.css
@@ -28,6 +28,8 @@ html, body {
 
 .footer {
 	text-align: center;
+	width: 960px;
+	margin: 0 auto;
 }
 
 #page-wrapper {
@@ -39,11 +41,11 @@ html, body {
    position:absolute;
    bottom:0;
    width:100%;
-   height:100px;   /* Height of the footer */
+   height:250px;   /* Height of the footer */
    
    background-image: url('../img/footer_bg.png');
    background-repeat: repeat-x;
-   background-position: top;
+   background-position: bottom;
 }
 
 /* Phillip's Overrides */
@@ -63,8 +65,9 @@ li.active a {
 	height: 303px;
 	width: 154px; 
 	position: relative;
-	z-index: 0;
-	margin-top: -25px;
+	z-index: -1;
+	margin-top: -50px;
+	float: left;
 }
 
 .fb {
@@ -94,3 +97,13 @@ li.active a {
 	margin: 0 auto;
 	padding-top: 20px;
 }
+
+
+
+
+
+
+
+
+
+
