--- a/webroot/css/deedsy.type.css
+++ b/webroot/css/deedsy.type.css
@@ -3,6 +3,7 @@
 h1 {
 	font: 700 32px "Open Sans Condensed", Helvetica, sans-serif;
 	color: #640633;
+	letter-spacing: -.05em;
 }
 
 h2 {
@@ -18,6 +19,11 @@ h3 {
 h4 {
 	font: 18px "Snippet", Helvetica, sans-serif;
 	color: #414141; 
+}
+
+h5 {
+	font: 700 14px "Open Sans Condensed", Helvetica, sans-serif;
+	color: #414141;
 }
 
 /* Navigation */
@@ -48,3 +54,10 @@ body {
 	font: 14px Myriad Pro, Myriad, Helvetica, Arial, Sans-serif !important;
 	color: #404242 !important;
 }
+
+#homecta h2 {
+	font-weight: 300;
+	color: #414141;
+}
+
+
