--- a/webroot/css/deedsy.layout.css
+++ b/webroot/css/deedsy.layout.css
@@ -18,6 +18,11 @@ html, body {
 	box-shadow: none;
 }
 
+.navbar .login{
+	float: right !important;
+	color: #fff;
+}
+
 .navbar .brand {
 	padding-top: 0px;
 }
@@ -105,7 +110,8 @@ li.active a {
 hr {
 	border-top: 1px solid #0096ff; 
 }
-/* Tables */
+
+/* Tables */
 
 table.table th {
 	background-color: #640663;
