--- a/webroot/css/bootstrap.css
+++ b/webroot/css/bootstrap.css
@@ -1266,7 +1266,7 @@ table {
 }
 .table tbody tr:hover td,
 .table tbody tr:hover th {
-  background-color: #f5f5f5;
+  background-color: #d32424;
 }
 table .span1 {
   float: none;
